verif/test/deca/syntax/invalid/invalid-if-condition-verif.res
src/test/deca/syntax/invalid/invalid-if-condition.deca:11:13: extraneous input ';' expecting ')'
